# ori-pop

./: .gitignore  AGENTS.md  Cargo.toml  PHILOSOPHY.md  README.md  ROADMAP.md  license.md
.github/workflows/: book.yml
crates/oripop-3d/: Cargo.toml
crates/oripop-3d/src/: camera.rs  canvas_raster.rs  capture.rs  inspector.rs  lib.rs  mesh.rs  player.rs  renderer.rs  scene.rs  shader3d.wgsl  sketch_viewport.rs  texture_gen.wgsl
crates/oripop-canvas/: Cargo.toml
crates/oripop-canvas/src/: bezier.rs  cartridge.rs  draw.rs  graphics.rs  lib.rs  line.rs  math.rs  prelude.rs  shader.wgsl  stipple.rs
crates/oripop-core/: Cargo.toml
crates/oripop-core/src/: bezier.rs  draw.rs  field.rs  lib.rs  point.rs  prelude.rs
crates/oripop-math/: Cargo.toml
crates/oripop-math/src/: frame.rs  lib.rs  mesh.rs  node.rs  surface.rs  tree.rs  value.rs
crates/oripop-project/: Cargo.toml
crates/oripop-project/src/: atlas.rs  bake.rs  build_gen.rs  canvas.rs  design.rs  io.rs  layout.rs  lib.rs  library.rs  project.rs  texture.rs
crates/oripop-runtime/: Cargo.toml
crates/oripop-runtime/src/: lib.rs
crates/oripop-studio/: Cargo.toml
crates/oripop-studio/src/: app.rs  bake.rs  cartridge.rs  cli.rs  editor.rs  engine.rs  gpu.rs  main.rs  paths.rs  play.rs  preview.rs  window.rs
docs/studio/: 01-architecture.md  02-workflows.md  03-data-model.md  04-roadmap.md  README.md  params-schema.md
examples/texture-library/: library.oripop
examples/texture-library/designs/coral-stipple/: design.oripop  main.rs
guide/: book.toml
guide/src/: SUMMARY.md  introduction.md
guide/src/api/: canvas.md  colors.md  curves.md  input.md  math.md  shapes.md  transforms.md
guide/src/getting-started/: first-sketch.md  installation.md
guide/src/vision/: roadmap.md  studio.md
presets/: default.json
projects/example-project/: project.oripop
projects/example-project/textures/coral-stipple/: Cargo.toml  params.json  texture.oripop
projects/example-project/textures/coral-stipple/src/: bin.rs  lib.rs
projects/example-project/textures/flowfield-ink/: Cargo.toml  params.json  texture.oripop
projects/example-project/textures/flowfield-ink/src/: bin.rs  lib.rs
projects/example-project/textures/lsystem-tree/: Cargo.toml  params.json  texture.oripop
projects/example-project/textures/lsystem-tree/src/: bin.rs  lib.rs
sketches/: 1-hello-ori-pop.rs  10-curves-3d-demo.rs  11-distribution-dial-demo.rs  12-graphics-demo.rs  13-flowfield-trails.rs  14-orbital-arcs.rs  15-noise-blobs.rs  16-scatter-brush.rs  17-lsystem-garden.rs  17-lsystem-maze.rs  18-truchet-arcs.rs  19-noise-contours.rs  2-primitives-demo.rs  20-reaction-diffusion.rs  3-transform-demo.rs  4-alpha-demo.rs  5-forces-demo.rs  6-interactive-demo.rs  7-textured-3d-demo.rs  8-lsystem-3d.rs  9-curves-demo.rs  Cargo.toml  alpha-demo.rs  curves-3d-demo.rs  curves-demo.rs  distribution-dial-demo.rs  forces-demo.rs  hello-ori-pop.rs  interactive-demo.rs  lsystem-3d.rs  primitives-demo.rs  textured-3d-demo.rs  transform-demo.rs
