[workspace]
members = [
  "crates/oripop-core",
  "crates/oripop-3d",
  "sketches",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["ORIPOP"]

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
log = "0.4"
pollster = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "27"
winit = "0.29"
