[workspace]
members = [
  "crates/oripop-math",
  "crates/oripop-core",
  "crates/oripop-3d",
  "sketches",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["ORIPOP"]

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "0.33", default-features = false }
egui-winit = { version = "0.33", default-features = false }
glam = "0.27"
log = "0.4"
pollster = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
ron  = "0.8"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "27"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
