[package]
name = "sketches"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oripop-canvas = { path = "../crates/oripop-canvas" }
oripop-3d   = { path = "../crates/oripop-3d" }
rand.workspace = true

[[bin]]
name = "hello-ori-pop"
path = "hello-ori-pop.rs"

[[bin]]
name = "primitives-demo"
path = "primitives-demo.rs"

[[bin]]
name = "transform-demo"
path = "transform-demo.rs"

[[bin]]
name = "alpha-demo"
path = "alpha-demo.rs"

[[bin]]
name = "forces-demo"
path = "forces-demo.rs"

[[bin]]
name = "interactive-demo"
path = "interactive-demo.rs"

[[bin]]
name = "curves-demo"
path = "curves-demo.rs"

[[bin]]
name = "curves-3d-demo"
path = "curves-3d-demo.rs"

[[bin]]
name = "textured-3d-demo"
path = "textured-3d-demo.rs"

[[bin]]
name = "lsystem-3d"
path = "lsystem-3d.rs"
