[package]
name = "sketches"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oripop-canvas = { path = "../crates/oripop-canvas" }
oripop-3d   = { path = "../crates/oripop-3d" }
rand.workspace = true

[[bin]]
name = "1-hello-ori-pop"
path = "1-hello-ori-pop.rs"

[[bin]]
name = "2-primitives-demo"
path = "2-primitives-demo.rs"

[[bin]]
name = "3-transform-demo"
path = "3-transform-demo.rs"

[[bin]]
name = "4-alpha-demo"
path = "4-alpha-demo.rs"

[[bin]]
name = "5-forces-demo"
path = "5-forces-demo.rs"

[[bin]]
name = "6-interactive-demo"
path = "6-interactive-demo.rs"

[[bin]]
name = "7-textured-3d-demo"
path = "7-textured-3d-demo.rs"

[[bin]]
name = "8-lsystem-3d"
path = "8-lsystem-3d.rs"

[[bin]]
name = "9-curves-demo"
path = "9-curves-demo.rs"

[[bin]]
name = "10-curves-3d-demo"
path = "10-curves-3d-demo.rs"

[[bin]]
name = "11-distribution-dial-demo"
path = "11-distribution-dial-demo.rs"

[[bin]]
name = "12-graphics-demo"
path = "12-graphics-demo.rs"
