[package]
name = "sketches"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oripop-canvas = { path = "../crates/oripop-canvas" }
oripop-3d   = { path = "../crates/oripop-3d" }
rand.workspace = true

[[bin]]
name = "1-hello-ori-pop"
path = "1-hello-ori-pop.rs"

[[bin]]
name = "2-primitives-demo"
path = "2-primitives-demo.rs"

[[bin]]
name = "3-transform-demo"
path = "3-transform-demo.rs"

[[bin]]
name = "4-alpha-demo"
path = "4-alpha-demo.rs"

[[bin]]
name = "5-forces-demo"
path = "5-forces-demo.rs"

[[bin]]
name = "6-interactive-demo"
path = "6-interactive-demo.rs"

[[bin]]
name = "7-textured-3d-demo"
path = "7-textured-3d-demo.rs"

[[bin]]
name = "8-lsystem-3d"
path = "8-lsystem-3d.rs"

[[bin]]
name = "9-curves-demo"
path = "9-curves-demo.rs"

[[bin]]
name = "10-curves-3d-demo"
path = "10-curves-3d-demo.rs"

[[bin]]
name = "11-distribution-dial-demo"
path = "11-distribution-dial-demo.rs"

[[bin]]
name = "12-graphics-demo"
path = "12-graphics-demo.rs"

[[bin]]
name = "13-flowfield-trails"
path = "13-flowfield-trails.rs"

[[bin]]
name = "14-orbital-arcs"
path = "14-orbital-arcs.rs"

[[bin]]
name = "15-noise-blobs"
path = "15-noise-blobs.rs"

[[bin]]
name = "16-scatter-brush"
path = "16-scatter-brush.rs"

[[bin]]
name = "17-lsystem-maze"
path = "17-lsystem-maze.rs"

[[bin]]
name = "18-truchet-arcs"
path = "18-truchet-arcs.rs"

[[bin]]
name = "19-noise-contours"
path = "19-noise-contours.rs"

[[bin]]
name = "20-reaction-diffusion"
path = "20-reaction-diffusion.rs"
