[package]
name = "oripop-3d"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
winit.workspace = true
oripop-core = { path = "../oripop-core" }
