[package]
name = "oripop-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
pollster.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
wgpu.workspace = true
winit.workspace = true

[dev-dependencies]
serde_json.workspace = true
