[package]
name = "oripop-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
lyon.workspace = true
pollster.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu.workspace = true
winit.workspace = true
