[package]
name = "oripop-math"
version.workspace = true
edition.workspace = true
license.workspace = true

# Zero GPU dependencies — this crate is headless and testable anywhere.
[dependencies]
glam       = { workspace = true, features = ["serde"] }
serde      = { workspace = true }
serde_json = { workspace = true }
ron        = { workspace = true }
