[package]
name = "oripop-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ori Pop Studio — texture library and editor shell."

[[bin]]
name = "oripop-studio"
path = "src/main.rs"

[dependencies]
bytemuck.workspace = true
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui-wgpu.workspace = true
image.workspace = true
libloading.workspace = true
oripop-canvas = { path = "../oripop-canvas" }
oripop-project = { path = "../oripop-project" }
pollster.workspace = true
serde_json.workspace = true
wgpu.workspace = true

[dev-dependencies]
