[package]
name = "lsystem-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L-system fractal branches — example texture."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "lsystem-tree-play"
path = "src/bin.rs"

[dependencies]
oripop-canvas = { path = "../../../../crates/oripop-canvas" }
oripop-runtime = { path = "../../../../crates/oripop-runtime" }
serde.workspace = true
serde_json.workspace = true
